Fixed a bug, in which the throbber would remain up after location errors. Made all the mask divs invisible (for now).

--- a/themes/GNYR/nouveau_map_styles.css
+++ b/themes/GNYR/nouveau_map_styles.css
@@ -1124,13 +1124,7 @@ div#bmlt_page_items.bmlt_page_items
     div.bmlt_nouveau_div
         div.bmlt_nouveau_details_mask_div
 {
-    position:absolute;
-    margin:0;
-    padding:0;
-    top:0px;
-    left:0px;
-    bottom:0px;
-    right:0px;
+    display:none;
 }
 
 div#bmlt_page_items.bmlt_page_items
